--- a/server/.env.example
+++ b/server/.env.example
@@ -3,3 +3,10 @@ SECRET_KEY=
 CLOUDINARY_CLOUD_NAME=
 CLOUDINARY_API_KEY=
 CLOUDINARY_API_SECRET=
+
+
+CLIENT_ID=
+CLIENT_SECRET=
+
+
+OPENAI_API_KEY=
