--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "google-auth-library": "^9.10.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
+    "openai": "^4.47.1",
     "pg": "^8.11.5",
     "sequelize": "^6.37.3"
   },
